List View Table created

--- a/app/views/list/view.html.erb
+++ b/app/views/list/view.html.erb
@@ -1,2 +1,11 @@
-<h1>List#view</h1>
-<p>Find me in app/views/list/view.html.erb</p>
+<table class="table">
+  <tr>
+    <th>Project Name</th>
+    <th>Iteration</th>
+    <th>Members</th>
+    <th>Ready</th>
+    <th>Working</th>
+    <th>Completed</th>
+    <th>Project Closed</th>
+  </tr>
+</table>
