--- a/app/views/list/view.html.erb
+++ b/app/views/list/view.html.erb
@@ -3,9 +3,20 @@
     <th>Project Name</th>
     <th>Iteration</th>
     <th>Members</th>
-    <th>Ready</th>
-    <th>Working</th>
+    <th>Billed</th>
+    <th>Bugs</th>
     <th>Completed</th>
-    <th>Project Closed</th>
+    <th>Iteration Closed</th>
   </tr>
+  <% @iterations.each_with_index do |iteration, i| %>
+  <tr>
+  	<td><%= iteration[:project_name] %></td>
+  	<td><%= iteration[:iteration_number] %></td>
+  	<td><%= iteration[:members].join(', ') %></td>
+  	<td><%= iteration[:billed_points] %></td>
+  	<td><%= iteration[:total_bug_points] %></td>
+  	<td><%= iteration[:completed_points] %></td>
+  	<td><%= iteration[:iteration_completed?] %></td>
+  </tr>
+  <% end %>
 </table>
