--- a/app/assets/stylesheets/calendar.css.scss
+++ b/app/assets/stylesheets/calendar.css.scss
@@ -1,3 +1,40 @@
 // Place all the styles related to the calendar controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#simplemodal-container a.modalCloseImg {
+	background:url(x.png) no-repeat; /* adjust url as required */
+	width:25px;
+	height:29px;
+	display:inline;
+	z-index:3200;
+	position:absolute;
+	top:-15px;
+	right:-18px;
+	cursor:pointer;
+}
+
+#simplemodal-overlay {
+	background-color: #000; 
+}
+#simplemodal-container {
+	height:320px; 
+	width:600px; 
+	color:#000; 
+	background-color:#fff; 
+	border:4px solid #444; 
+	padding:12px;
+}
+#simplemodal-container code {
+	background:#141414; 
+	border-left:3px solid #65B43D; 
+	color:#bbb; 
+	display:block; 
+	margin-bottom:12px; 
+	padding:4px 6px 6px;
+}
+#simplemodal-container a {
+	color:#ddd;
+}
+#simplemodal-container #basic-modal-content {
+	padding:8px;
+}
